投稿のインサート処理

--- a/views/posts/new.html
+++ b/views/posts/new.html
@@ -2,7 +2,7 @@
   <body>
     <h2>新規投稿</h2>
     <form action="/post/create" method="post">
-      <textarea></textarea>
+      <textarea name="content" rows="8" cols="80"></textarea>
       <input type="submit" value="投稿">
     </form>
   </body>
